--- a/BloombergReader/BloombergReader.csproj
+++ b/BloombergReader/BloombergReader.csproj
@@ -54,18 +54,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="CanvasWithDataProperty.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="View\MainWindowView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="View\Shapes\ArrowEnd.cs" />
+    <Compile Include="View\Shapes\ArrowEnds.cs" />
+    <Compile Include="View\Shapes\ArrowLineBase.cs" />
     <Compile Include="BarCanvas.cs" />
-    <Compile Include="CanvasWithDataProperty.xaml.cs">
-      <DependentUpon>CanvasWithDataProperty.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Model\Bar.cs" />
     <Compile Include="ViewModel\BarViewModel.cs" />
     <Compile Include="View\App.xaml.cs">
