Fixed header shift

--- a/BloombergReaderWeb/BloombergReaderWeb.csproj
+++ b/BloombergReaderWeb/BloombergReaderWeb.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="BEmuRequests\IntradayBarDataRequest.cs" />
     <Compile Include="Models\Bar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -157,6 +158,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BEmu\BEmu.csproj">
+      <Project>{0dd8974e-da15-4131-8805-b44815053f61}</Project>
+      <Name>BEmu</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
