--- a/BloombergReader.Core/BloombergReader.Core.csproj
+++ b/BloombergReader.Core/BloombergReader.Core.csproj
@@ -113,8 +113,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BloombergRequests\NewsRequest.cs" />
     <Compile Include="Logging\Logger.cs" />
     <Compile Include="Models\Bar.cs" />
+    <Compile Include="Models\Story.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BloombergRequests\IntradayBarDataRequest.cs" />
   </ItemGroup>
