Simple javascript animation + LoggingFilterAction

--- a/BloombergReader.Core/BloombergReader.Core.csproj
+++ b/BloombergReader.Core/BloombergReader.Core.csproj
@@ -101,6 +101,8 @@
       <HintPath>..\packages\System.Threading.Thread.4.0.0\lib\net46\System.Threading.Thread.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -115,6 +117,7 @@
   <ItemGroup>
     <Compile Include="BloombergRequests\NewsRequest.cs" />
     <Compile Include="Logging\Logger.cs" />
+    <Compile Include="Logging\LoggingFilterAtribute.cs" />
     <Compile Include="Models\Bar.cs" />
     <Compile Include="Models\Story.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
