--- a/BloombergReader.Core/BloombergReader.Core.csproj
+++ b/BloombergReader.Core/BloombergReader.Core.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Logging\Logger.cs" />
     <Compile Include="Logging\LoggingFilterAtribute.cs" />
     <Compile Include="Models\Bar.cs" />
+    <Compile Include="Models\Image.cs" />
     <Compile Include="Models\Story.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BloombergRequests\IntradayBarDataRequest.cs" />
