--- a/BloombergReader.Web/packages.config
+++ b/BloombergReader.Web/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="angularjs" version="1.6.2" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
   <package id="jQuery" version="1.10.2" targetFramework="net461" />
   <package id="log4net" version="2.0.6" targetFramework="net461" />
